--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
     "type": "library",
     "require": {
         "php": ">=8.0",
-        "predis/predis": "2.0.x-dev",
+        "predis/predis": "2.0.*",
         "php-open-source-saver/jwt-auth": "dev-main",
-        "spatie/laravel-permission": "5.x-dev"
+        "spatie/laravel-permission": "5.*"
     },
     "license": "MIT",
     "autoload": {
